--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
                 <input type="date" class="vacationEnd" name="vacationEnd" placeholder="" required>
             </div>
 
-            <footer>
-
-                <b>Задача заключается в необходимости автоматизации бизнес-процесса, связанного с формированием ежегодных отпусков сотрудникам МИП, для дальнейшей интеграция данного решения с бухгалтерским учетом. Необходимо формулизация данного процесса, проектировать концептуальную модель базы данных (БД), создать физическую БД и автоматизировать данную задачу на основе спроектированного бизнес-процесса в малых инновационных предприятиях.</b>
-
-            </footer>
+           <button type="submit">Отправить</button>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
